--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgba(0, 0, 0, 0.884);
-  opacity: 1;
+  /* background-color: rgba(0, 0, 0, 0.9); */
 }
 
 code {
